--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,16 +1,38 @@
 body{
   background-color: rgb(243, 241, 241);
-}
+};
 
+.leftItemsLinks{
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
 
 .Friendshiplogo{
   width: 30px;
+  margin-right: 10px
+  
 };
+
+.Accountlogo{
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  margin-right: 10px
+};
+
+.friendslogo{
+  width: 40px;
+  height: 36px;
+  
+ 
+}
 
 .homeLeftItems{
   display: flex;
   align-items: center;
   margin-top: 20px;
+  margin-left: 15px
 };
 
 
@@ -45,12 +67,28 @@ body{
   border-radius: 8px;
 }
 
+.threeCenteredIcons{
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+};
+
+.liveVideo{
+  color: black;
+}
+
 
 .storiesLink{
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: black
  
 };
+
+.liveVideoLink{
+  text-decoration: none;
+}
 
 .plusIconTopContainer{
   margin-right: 10px;
@@ -66,6 +104,7 @@ body{
   // align-items: center;
   // justify-content: space-between;
   cursor: pointer;
+  margin-left: 10px
 };
 
 .accountComment{
@@ -76,6 +115,8 @@ body{
 .commentInput{
   border-radius: 20px;
   padding: 10px 280px 10px 10px;
+  border: none;
+  background-color: rgb(236, 232, 232);
 }
 
 .centralThreeItems div{
@@ -86,13 +127,27 @@ body{
   display: flex;
   // justify-content: space-between
   align-items: center;
+  margin: 0 auto;
 };
 
+.profileLink,.underProfileSponsoredLink{
+  text-decoration: none;
+  color: grey
+};
+
+.profileName{
+  font-weight: bold;
+  color: black;
+}
 
 .sponsoredWebSite{
   display: flex;
   align-items: center;
+  text-decoration: none;
+  color: black
 };
+
+
 
 .sponsoredPhoto{
 width: 50%;
@@ -107,10 +162,24 @@ height: 15vh;
   margin-right: 10px
 };
 
+.rightTopSponsored{
+  margin-top: 10px;
+}
+
 
 .rightFirstSponsored{
   margin-bottom: 20px;
+  margin-top: 20px;
 };
+
+.rightFirstSponsored :hover{
+  background-color: rgb(213, 208, 208);
+ 
+};
+
+.rightSecondSponsored :hover{
+  background-color: rgb(213, 208, 208);
+}
 
 .createNewGroup{
   display: flex;
@@ -125,5 +194,113 @@ height: 15vh;
 
 .button{
   background-color: var (--button-bg-color);
+};
+
+.trendyolimg{
+  width: 50px;
+  border-radius: 30px;
+  margin-right: 10px
+};
+
+.profileWithImg{
+  display: flex;
+  align-items: center;
+};
+
+.profileWithClosebar{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  margin-right: 10px
+};
+
+.discountInfo{
+margin-left: 10px;
+margin-bottom: 5px;
 }
 
+.thirdCenterHomeContainer{
+ border-radius: 10px;
+  margin-top: 15px;
+  background-color: white;
+};
+
+.trendYolAndDoneIcon{
+  display: flex;
+  align-items: center;
+};
+
+.doneIcon{
+  width: 15px;
+  margin-left: 5px;
+};
+
+.sponsoredAndPublicIcon{
+  display: flex;
+  align-items: center;
+};
+
+.publicIcon{
+  width: 15px;
+  margin-left: 5px;
+};
+
+.trendYolImage{
+margin-left: 40px;
+margin-right: 40px;
+cursor: pointer;
+}
+
+.advertisementContainer{
+  background-color: rgb(225, 222, 222);
+ 
+};
+.advertisementLink{
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  
+};
+
+
+.advertisementBold{
+  font-weight: bold;
+  color: black;
+};
+
+.advertisementH3{
+  font-size: 12px;
+  color: grey;
+};
+
+.learnBtn{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  background-color: rgb(244, 235, 235);
+  border-radius: 6px;
+  border: none;
+  height: 30px;
+};
+
+.advertisementOptions{
+  margin-top: 10px;
+  // margin-bottom: 10px;
+  margin-left: 15px;
+};
+
+.likeIcon{
+  width: 20px;
+  margin-right: 5px;
+  cursor: pointer;
+};
+
+.likeAndCount{
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
